# rules_docgen

./: .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  mkdocs.tpl.yaml  requirements.in  requirements.txt
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  docs.yaml  release-tags.yaml  release.yaml  release_prep.sh
docgen/: BUILD.bazel  defs.bzl  docs.bzl  extensions.bzl  repositories.bzl
docgen/private/: BUILD.bazel  docs.bzl  docs_action.bzl  docs_add_last_updated.bzl  docs_index.bzl  docs_link.bzl  git_last_updated_timestamps.bzl  markdown_action.bzl  mkdocs_build.bzl  mkdocs_config.bzl  mkdocs_serve.bzl  providers.bzl  utils.bzl
docgen/private/sh/: BUILD.bazel  docs_add_last_updated.ps1.tpl  docs_add_last_updated.sh.tpl  git-last-updated-timestamps.ps1  git-last-updated-timestamps.sh  markdown_add_last_updated.ps1.tpl
e2e/git_last_updated/: .bazelrc  BUILD.bazel  MODULE.bazel  golden-last_updated.json  mkdocs.tpl.yaml  requirements.txt  test.md
e2e/git_last_updated/git_test/: COMMIT_EDITMSG  index
e2e/git_last_updated/git_test/logs/refs/heads/: master
e2e/git_last_updated/git_test/refs/heads/: master
e2e/git_last_updated/golden-docs/docs/_bazel_docs/: test.md
e2e/smoke/: BUILD.bazel  MODULE.bazel  mkdocs.tpl.yaml  other-info.md  requirements.txt
examples/typescript/: BUILD  MODULE.aspect
examples/typescript/tools/lint/: BUILD  linters.bzl
tools/: BUILD.bazel  header.vm
