load("@bazel_lib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//docgen/private:docs",
        "//docgen/private:docs_add_last_updated",
        "//docgen/private:git_last_updated_timestamps",
        "//docgen/private:mkdocs_build",
        "//docgen/private:mkdocs_config",
    ],
)

bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        ":repositories",
        "@bazel_tools//tools/build_defs/repo:cache.bzl",
    ],
)
